prevent horizontal scrolling

--- a/ui/src/components/container/style.css
+++ b/ui/src/components/container/style.css
@@ -61,6 +61,8 @@ input[type="color"]::-webkit-color-swatch {
     .container {
         flex-direction: column;
         margin: auto;
+         max-width: 100% !important;
+        overflow-x: hidden !important;
     }
     
     .leftcol {
